// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decoration Multi decoration 1`] = `
"<article>
  <h1 class=\\"title\\">Decoration</h1>
  <section>
    <p><i class=\\"italic red underline line-through\\">deco-!&nbsp;deco-_&nbsp;deco--&nbsp;deco-/</i></p>
  </section>
</article>"
`;

exports[`decoration Simple decoration 1`] = `
"<article>
  <h1 class=\\"title\\">Decoration</h1>
  <section>
    <p><i class=\\"big\\">deco-*-3</i></p>
  </section>
</article>"
`;
